# event-gulper

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.pipeline  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: pyproject.toml
api/src/: main.py
models/: README.md  pyproject.toml
models/src/event_gulper_models/: __init__.py  events.py
pipeline/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  scraper.py
pipeline/core/: pipelines.py
pipeline/core/sources/: protocols.py  siegessaeule.py
pipeline/core/transforms/: database.py  llm.py  protocols.py  scrape.py
pipeline/orchestration/: siegessaeule_deployment.py  siegessaeule_flow.py
pipeline/pipeline/: database.py  flows.py  models.py  pipelines.py  run_scraper.py  scraper.py  serve_scraper.py
pipeline/pipeline/a_source/: protocols.py  siegessaeule.py
pipeline/pipeline/b_extract/: protocols.py  siegessaeule.py
pipeline/pipeline/b_transform/: database.py  llm.py  protocols.py  scrape.py
pipeline/pipeline/c_flows/: siegessaeule.py
pipeline/pipeline/c_transform/: database.py  llm.py  protocols.py  scrape.py
pipeline/pipeline/d_load/: database.py
pipeline/pipeline/d_runners/: scrape_siegessaeule.py
pipeline/pipeline/e_flows/: siegessaeule.py
pipeline/pipeline/extract/: siegessaeule.py
pipeline/pipeline/f_runners/: scrape_siegessaeule.py
pipeline/pipeline/load/: database.py
pipeline/pipeline/models/: events.py
pipeline/pipeline/transform/: llm.py
pipeline/tests/: conftest.py  test_dummy.py  test_scraper.py
pipeline/tests/core/: test_llm.py  test_scrape.py
pipeline/tests/core/sources/: test_siegessaeule.py  test_telegram.py
pipeline/tests/extract/: test_siegessaeule.py
pipeline/tests/source/: test_source.py
pipeline/tests/transform/: test_llm.py  test_scrape.py
