[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "debugpy>=1.8.12",
    "httpx>=0.28.1",
    "instructor>=1.7.2",
    "logfire>=3.6.2",
    "markdownify>=1.0.0",
    "prefect>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.24",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-httpx>=0.35.0",
    "sqlalchemy>=2.0.38",
]
